<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="24dp"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextHeaderStyle"
            android:text="@string/main_points"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/main_count_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/main_count"
                android:inputType="number"
                android:imeOptions="actionDone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:layout_marginHorizontal="24dp"
            android:gravity="center_horizontal"
            android:textSize="12sp"
            android:text="@string/main_points_restrict"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_action_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="24dp"
            android:text="@string/main_action"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:textAppearance="@style/TextHeaderStyle"
            android:text="@string/main_table"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_table_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:textAppearance="@style/TextHeaderStyle"
            android:text="@string/main_chart"/>
        
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp">

            <FrameLayout
                android:id="@+id/main_chart_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

        </HorizontalScrollView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>

